# go-auth-web-service

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  docker-compose.yml
go/: Dockerfile  go.mod  go.sum
go/cmd/migrator/: main.go
go/cmd/sso/: main.go
go/config/: dev.yml  dev1.yml  tests.yml
go/internal/app/: app.go
go/internal/app/grpc/: app.go
go/internal/config/: config.go
go/internal/grpc/auth/: server.go
go/internal/lib/jwt/: jwt.go
go/internal/lib/logger/handlers/slogpretty/: slogpretty.go
go/internal/lib/utils/: utils.go
go/internal/services/auth/: auth.go
go/internal/storage/sqlite/: sqlite.go
go/migrations/: 1_init.up.sql
go/storage/: sso.db
go/tests/: auth_register_login_test.go
go/tests/suite/: suite.go
protos/: go.mod
protos/sso/: sso.proto
python/: .dockerignore  Dockerfile  README.md  dev.yml  main.py  pyproject.toml  requirements.txt
python/src/config/: __init__.py  config.py  dev.yml
python/src/routers/dummy/: payloads.py  router.py
python/src/services/: __init__.py  grpc_client.py  redis_client.py
